tests/baselines/reference/mergedInterfacesWithConflictingPropertyNames.errors.txt
tests/cases/conformance/interfaces/declarationMerging/mergedInterfacesWithConflictingPropertyNames.ts(6,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type '文字', but here has type '数字'.
tests/cases/conformance/interfaces/declarationMerging/mergedInterfacesWithConflictingPropertyNames.ts(15,9): error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type 'T', but here has type '数字'.
tests/cases/conformance/interfaces/declarationMerging/mergedInterfacesWithConflictingPropertyNames.ts(39,9): error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type 'T', but here has type '数字'.


==== tests/cases/conformance/interfaces/declarationMerging/mergedInterfacesWithConflictingPropertyNames.ts (3 errors) ====
    interface A {
        x: string; // error
    }
    
    interface A {
        x: number;
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type '文字', but here has type '数字'.
    }
    
    module M {
        interface A<T> {
            x: T;
        }
    
        interface A<T> {
            x: number;  // error
            ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type 'T', but here has type '数字'.
        }
    }
    
    module M2 {
        interface A<T> {
            x: T;
        }   
    }
    
    module M2 {
        interface A<T> {
            x: number;  // ok, different declaration space than other M2
        }
    }
    
    module M3 {
        export interface A<T> {
            x: T;
        }
    }
    
    module M3 {
        export interface A<T> {
            x: number;  // error
            ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type 'T', but here has type '数字'.
        }
    }